# storage/api-docs/api-docs.json
@@ -1,11 +1,11 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Viyar API",
+        "title": "API",
         "description": "Документация запросов",
         "contact": {
-            "name": "Viyar API Support",
-            "email": "olegzharko@egmail.com"
+            "name": "API Support",
+            "email": "admin@admin.com"
         },
         "version": "2.0.0"
     },
@@ -41,7 +41,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/accounts/{account}": {
@@ -87,7 +92,12 @@
                     "404": {
                         "description": "Ответ что аккаунта с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -115,7 +125,12 @@
                     "404": {
                         "description": "Ответ что аккаунта с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/accounts/{account}/orders": {
@@ -176,7 +191,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/entities": {
@@ -269,7 +289,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания сущности"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/entities/{entity}": {
@@ -315,7 +340,12 @@
                     "404": {
                         "description": "Ответ что сущности с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
@@ -384,7 +414,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания сущности"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -412,7 +447,12 @@
                     "404": {
                         "description": "Ответ что сущности с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/filters": {
@@ -458,7 +498,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
@@ -530,7 +575,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания фильтра"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/filters/types": {
@@ -557,7 +607,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/filters/{filter}": {
@@ -612,7 +667,12 @@
                     "404": {
                         "description": "Ответ что фильтра с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
@@ -699,7 +759,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания фильтра"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -727,7 +792,12 @@
                     "404": {
                         "description": "Ответ что фильтра с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/orders": {
@@ -842,7 +912,12 @@
                     "404": {
                         "description": "Ответ что заказа с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -870,7 +945,12 @@
                     "404": {
                         "description": "Ответ что заказа с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/products": {
@@ -957,7 +1037,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания продукта"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/products/{product}": {
@@ -1003,7 +1088,12 @@
                     "404": {
                         "description": "Ответ что продукта с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
@@ -1066,7 +1156,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания продукта"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -1094,7 +1189,12 @@
                     "404": {
                         "description": "Ответ что продукт с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/settings": {
@@ -1204,7 +1304,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания настройки"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/settings/{setting}": {
@@ -1256,7 +1361,12 @@
                     "404": {
                         "description": "Ответ что настройки с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
@@ -1336,7 +1446,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания настройки"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -1364,7 +1479,12 @@
                     "404": {
                         "description": "Ответ что настройки с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/templates": {
@@ -1481,7 +1601,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания шаблона"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/templates/{template}": {
@@ -1536,7 +1661,12 @@
                     "404": {
                         "description": "Ответ что шаблона с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
@@ -1623,7 +1753,12 @@
                     "422": {
                         "description": "Ответ сервера что нет нужных данных для создания шаблона"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -1651,7 +1786,20 @@
                     "404": {
                         "description": "Ответ что шаблона с таким идентификатором не существует"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer"
             }
         }
     }
